[package]
name = "deno_embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rusty_v8"]
rusty_v8 = []
op = []


[dependencies]
deno_runtime = { version = "0.28.0" }
deno_core = { version = "0.102.0" }
tokio = { version = "1.10.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }

